--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FLAI Projeto Copa 2022</title>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LK7D4DCNDZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LK7D4DCNDZ');
+</script>
+
 <body>
 <center>
     <iframe title="FLAI Projeto Copa 2022" width="1024" height="612" src="https://app.powerbi.com/view?r=eyJrIjoiNmQzOTFjMTUtMWUyOS00ODdhLTliZjUtYzY4YmZiOTM0ZTM1IiwidCI6IjdjOWMyMjljLTYwMWItNDg3ZC1hOTk2LWQxYWRiZTg5N2ZhZSJ9&embedImagePlaceholder=true&pageName=ReportSection609c29753052b9ce41ac" frameborder="0" allowFullScreen="true"></iframe>
