--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FLAI Projeto Copa 2022</title>
-</head>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LK7D4DCNDZ"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V89PLZ4W9L"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-LK7D4DCNDZ');
+  gtag('config', 'G-V89PLZ4W9L');
 </script>
+</head>
+
 
 <body>
 <center>
