--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 <center>
-    <iframe title="FLAI Projeto Copa 2022" width="1024" height="612" src="https://app.powerbi.com/view?r=eyJrIjoiNmQzOTFjMTUtMWUyOS00ODdhLTliZjUtYzY4YmZiOTM0ZTM1IiwidCI6IjdjOWMyMjljLTYwMWItNDg3ZC1hOTk2LWQxYWRiZTg5N2ZhZSJ9&embedImagePlaceholder=true&pageName=ReportSection609c29753052b9ce41ac" frameborder="0" allowFullScreen="true"></iframe>
+  <iframe title="FLAI Projeto Copa 2022 - CAPA" width="1024" height="612" src="https://app.powerbi.com/view?r=eyJrIjoiYmU3NjY2ZWYtNjA1NC00MmJmLWEyYzItNTVjYzczMjBlOTU4IiwidCI6IjdjOWMyMjljLTYwMWItNDg3ZC1hOTk2LWQxYWRiZTg5N2ZhZSJ9&embedImagePlaceholder=true" frameborder="0" allowFullScreen="false"></iframe>
 </center>
 </body>
 </html>
